Added a component to contain chart components, general updates and refactoring

--- a/src/Containers/App.scss
+++ b/src/Containers/App.scss
@@ -1,12 +1,12 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
 
   text-align: center;
-}
-
-.App-header {
-  color: rgb(228, 79, 79);
+  
+  .App-header {
+    color: rgb(228, 79, 79);
+  }
 }
