Uodated the styling

--- a/src/Components/Portfolio.scss
+++ b/src/Components/Portfolio.scss
@@ -1,9 +1,7 @@
-.chartContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.Portfolio {
+    padding: 1em;
 
-    .Chart {
-        width: 50%;
+    h2 {
+        margin-bottom: 0;
     }
 }
