--- a/src/Containers/App.scss
+++ b/src/Containers/App.scss
@@ -1,12 +1,14 @@
-.App {
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
+@import '../colors.scss';
 
+.App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   
   .App-header {
-    color: rgb(228, 79, 79);
+    color: $primary-color;
+    margin-bottom: 1em;
+    text-shadow: darken($primary-color, 10) 1px 1px 3px;
   }
 }
