Uodated the styling

--- a/src/Components/Search.scss
+++ b/src/Components/Search.scss
@@ -16,9 +16,7 @@ $box-shadow:  0 14px 26px -12px $shadow-from,
         font-size: 1.2em;
         text-align: center;
         padding: .5em;
-        // border: solid 1px grey;
-        border: none;
-        border-bottom: solid 1px silver;
+        border: solid 1px silver;
         border-radius: 4px;
     }
 
