--- a/src/Containers/App.scss
+++ b/src/Containers/App.scss
@@ -1,5 +1,5 @@
 @import '../colors.scss';
-
+              
 .App {
   text-align: center;
   display: flex;
@@ -8,7 +8,6 @@
   
   .App-header {
     color: $primary-color;
-    margin-bottom: 1em;
-    text-shadow: darken($primary-color, 10) 1px 1px 3px;
+    text-shadow: 1px 1px 2px rgb(67, 71, 67);
   }
 }
