--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
   font-family: Trebuchet, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f9f9f9;
 }
 
 h1 {
